--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -6,18 +6,23 @@ linkTitle = "Help Adtoyp # SmartClip"
 
 {{< blocks/cover title="Documentation for Adtopy (SmartClip)" image_anchor="top" height="full" color="orange" >}}
 <div class="mx-auto">
-	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
-		Documentation <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/plantillas" >}}">
+		Sistema de Plantillas <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
+	<a class="btn btn-lg btn-primary mr-3 mb-4" href="#">
+		Gestor de Jobs (soon) <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+	</a>
+</div>
+<div class="mx-auto">
 	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/frodriguezsmartclip/help-adtopy">
 		Repo GitHub <i class="fab fa-github ml-2 "></i>
 	</a>
-	<p class="lead mt-5">(v.1.0) beta</p>
+	<p class="lead">(v.1.0) beta</p>
 </div>
 {{< /blocks/cover >}}
 
 {{% blocks/lead color="secundary" %}}
-**"Help Adtopy"** es un repositorio de información y documentación asociada al proyecto Adtopy de Smartclip. En la documentación asociada, podrás ver cómo usar el sistema de plantillas.
+**"Help Adtopy"** es un repositorio de información y documentación asociada al proyecto Adtopy de Smartclip. En la documentación asociada, podrás ver cómo usar el sistema de Plantillas, gestor de Jobs y otras herramientas creadas.
 {{% /blocks/lead %}}
 
 
