puesto theme="docsy" y contenido 'jobs'

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -9,7 +9,7 @@ linkTitle = "Help Adtoyp # SmartClip"
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/plantillas" >}}">
 		Sistema de Plantillas <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
-	<a class="btn btn-lg btn-primary mr-3 mb-4" href="#">
+	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/jobs" >}}">
 		Gestor de Jobs (soon) <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
 </div>
