change help-adtopy to docs-adtopy to _index.md

--- a/content/es/_index.html
+++ b/content/es/_index.html
@@ -22,7 +22,7 @@ linkTitle = "Help Adtoyp # SmartClip"
 {{< /blocks/cover >}}
 
 {{% blocks/lead color="secundary" %}}
-**"Help Adtopy"** es un repositorio de información y documentación asociada al proyecto Adtopy de Smartclip. En la documentación asociada, podrás ver cómo usar el sistema de Plantillas, gestor de Jobs y otras herramientas creadas.
+**"Docs Adtopy"** es un repositorio de información y documentación asociada al proyecto Adtopy de Smartclip. En la documentación asociada, podrás ver cómo usar el **sistema de Plantillas, gestor de Jobs** y otras herramientas creadas.
 {{% /blocks/lead %}}
 
 
