cambio index.html

--- a/content/es/_index.html
+++ b/content/es/_index.html
@@ -17,12 +17,12 @@ linkTitle = "Help Adtoyp # SmartClip"
 	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/frodriguezsmartclip/help-adtopy">
 		Repo GitHub <i class="fab fa-github ml-2 "></i>
 	</a>
-	<p class="lead">(v.1.0) beta</p>
+	<p class="lead">(v.1.1) beta</p>
 </div>
 {{< /blocks/cover >}}
 
 {{% blocks/lead color="secundary" %}}
-**"Docs Adtopy"** es un repositorio de información y documentación asociada al proyecto Adtopy de Smartclip. En la documentación asociada, podrás ver cómo usar el **sistema de Plantillas, gestor de Jobs** y otras herramientas creadas.
+**"Docs Adtopy"** es un repositorio de información y documentación asociada al proyecto Adtopy de Smartclip. En la documentación asociada, podrás ver cómo usar el **sistema de Plantillas, gestor de Jobs** y otras herramientas creadas para SmartClip.
 {{% /blocks/lead %}}
 
 
