--- a/content/es/_index.html
+++ b/content/es/_index.html
@@ -12,6 +12,9 @@ linkTitle = "Help Adtoyp # SmartClip"
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/jobs" >}}">
 		Gestor de Jobs (soon) <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
+	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/siviglia" >}}">
+		Siviglia (soon) <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+	</a>
 </div>
 <div class="mx-auto">
 	<a class="btn btn-lg btn-secondary mr-3 mb-4" target="_blank" href="https://github.com/frodriguezsmartclip/docs-adtopy">
