--- a/content/es/_index.html
+++ b/content/es/_index.html
@@ -17,7 +17,7 @@ linkTitle = "Help Adtoyp # SmartClip"
 	</a>
 </div>
 <div class="mx-auto">
-	<a class="btn btn-lg btn-secondary mr-3 mb-4" target="_blank" href="https://github.com/frodriguezsmartclip/docs-adtopy">
+	<a rel="noopener" class="btn btn-lg btn-secondary mr-3 mb-4" target="_blank" href="https://github.com/frodriguezsmartclip/docs-adtopy">
 		Repo GitHub <i class="fab fa-github ml-2 "></i>
 	</a>
 	<p class="lead">(v.1.1) beta</p>
